--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@neomura/png-to-phomena-m110",
-  "description": "Command-line tool to convert PNG streams to streams which can be forwarded to Phomena M110 label printers.",
+  "name": "@neomura/png-to-phomemo-m110",
+  "description": "Command-line tool to convert PNG streams to streams which can be forwarded to Phomemo M110 label printers.",
   "version": "0.0.0",
   "engines": {
     "node": ">=14.15.3"
@@ -17,7 +17,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/neomura/png-to-phomena-m110"
+    "url": "https://github.com/neomura/png-to-phomemo-m110"
   },
   "license": "MIT",
   "devDependencies": {
@@ -48,7 +48,7 @@
   "types": "index.d.ts",
   "sideEffects": false,
   "bin": {
-    "neomura-png-to-phomena-m110": "./index.js"
+    "neomura-png-to-phomemo-m110": "./index.js"
   },
   "dependencies": {
     "@neomura/js-command-line-helpers": "0.0.0",
